--- a/css/havtent.css
+++ b/css/havtent.css
@@ -2,37 +2,52 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    min-width: 100vh;
+    background-color: whitesmoke;
     font-family: 'Poppins', sans-serif;
 }
 
-.section-1 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-}
-
-.section-1 .section-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background-color: aqua;
+header {
+    position: fixed;
     width: 100%;
-}
-
-.section-1 .section-container .container {
+    top: 0;
+    right: 0;
+    z-index: 1000;
     display: flex;
     align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background-color: aqua;
-    width: 100%;
+    justify-content: space-between;
+    padding: 28px 12%;
+    background: #ffffff;
+    transition: all .5s ease;
+    box-shadow: 0 5px 30px rgba(0, 0, 0, 0.3);
 }
 
 .nav-bar {
     display: flex;
-    justify-content: center;
-    height: 50px;
-    background-color: aquamarine;
+    visibility: visible;
+}
+
+.logo {
+    font-size: 20px;
+    text-decoration: none;
+    font-weight: 600;
+    color: #52B788;
+}
+
+.logo span {
+    color: #40916c;
+}
+
+.nav-bar li {
+    list-style: none;
+    margin: 0 15px;
+}
+
+.nav-bar li a {
+    text-decoration: none;
+    font-size: 1.1rem;
+    color: #40916c;
 }
