--- a/css/havtent.css
+++ b/css/havtent.css
@@ -10,6 +10,7 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+ /* nav bar section */
 header {
     position: fixed;
     width: 100%;
@@ -19,7 +20,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 28px 12%;
+    padding: 15px 5%;
     background: #ffffff;
     transition: all .5s ease;
     box-shadow: 0 5px 30px rgba(0, 0, 0, 0.3);
@@ -30,20 +31,18 @@ header {
     visibility: visible;
 }
 
-.logo {
-    font-size: 20px;
-    text-decoration: none;
-    font-weight: 600;
-    color: #52B788;
+.logo img{
+    width: 120px;
+    height: 50px;
 }
 
-.logo span {
+/* .logo span {
     color: #40916c;
-}
+} */
 
 .nav-bar li {
     list-style: none;
-    margin: 0 15px;
+    margin: 0 10px;
 }
 
 .nav-bar li a {
@@ -94,8 +93,8 @@ header {
         position: absolute;
         top: 100%;
         right: 2%;
-        width: 270px;
-        height: 29vh;
+        width: 300px;
+        height: 40vh;
         background: #40916c;
         display: none;
         flex-direction: column;
@@ -103,6 +102,7 @@ header {
         border-radius: 0 0 10px 10px;
         transition: all 0.50s ease;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        z-index: 1000;
     }
 
     .nav-bar.active {
@@ -111,12 +111,87 @@ header {
 
     .nav-bar li a {
         display: block;
-        margin: 8px 0px;
-        padding: 3px 25px;
+        margin: 10px 0px;
+        padding: 7px 25px;
         color: #ffffff;
     }
 
     .nav-bar li a.active {
         background-color: whitesmoke;
     }
+}
+
+/* Image section */
+.section-1 img{
+    position: relative;
+    width: 100%;
+    height: 95vh;
+}
+
+#prevBtn {
+    position: absolute;
+    display: flex;
+    top: 50%;
+    left: 5%;
+    transform: translate(-50%, -50%) !important;
+    font-size: 50px;
+    border: none;
+    background: transparent;
+    color: rgb(168, 160, 160);
+
+    cursor: pointer;
+}
+
+#prevBtn:hover {
+    color: gray;
+}
+
+#nextBtn {
+    position: absolute;
+    display: flex;
+    top: 50%;
+    right: 2%;
+    transform: translate(-50%, -50%) !important;
+    font-size: 50px;
+    border: none;
+    background: transparent;
+    color: rgb(168, 160, 160);
+    cursor: pointer;
+}
+
+#nextBtn:hover {
+    color: gray;
+}
+
+@media (max-width: 840px) {
+    .section-1 img {
+        height: 70vh;
+    }
+
+    #prevBtn {
+        position: absolute;
+        display: flex;
+        top: 40%;
+        left: 5%;
+        transform: translate(-50%, -50%) !important;
+    }
+
+    #nextBtn {
+        position: absolute;
+        display: flex;
+        top: 40%;
+        right: 3%;
+        z-index: 3;
+        transform: translate(-50%, -50%) !important;
+    }
+}
+
+/* First content  */
+.content-1 {
+    position: absolute;
+    top: 50%;
+    left: 70%;
+    transform: translate(-50%, -50%) !important;
+
+    z-index: 10;
 }
