--- a/css/havtent.css
+++ b/css/havtent.css
@@ -20,7 +20,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 15px 5%;
+    padding: 10px 5%;
     background: #ffffff;
     transition: all .5s ease;
     box-shadow: 0 5px 30px rgba(0, 0, 0, 0.3);
@@ -42,7 +42,7 @@ header {
 
 .nav-bar li {
     list-style: none;
-    margin: 0 10px;
+    margin: 0 5px;
 }
 
 .nav-bar li a {
@@ -51,7 +51,7 @@ header {
     color: #000;
     font-weight: 500;
     padding: 5px 15px;
-    margin: 0 20px;
+    margin: 0 5px;
     border-radius: 5px;
 }
 
@@ -122,12 +122,30 @@ header {
 }
 
 /* Image section */
-.section-1 img{
-    position: relative;
-    width: 100%;
-    height: 100vh;
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;    
 }
 
+.image-comtainer {
+    position: relative;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    background-color: blueviolet;
+    transition: 0.30s ease-in-out;
+    
+}
+
+.image-comtainer img {
+    width: 100%;
+    height: 100vh;
+    
+}
 #prevBtn {
     position: absolute;
     display: flex;
@@ -137,13 +155,12 @@ header {
     font-size: 50px;
     border: none;
     background: transparent;
-    color: rgb(168, 160, 160);
-
+    opacity: .3;
     cursor: pointer;
 }
 
 #prevBtn:hover {
-    color: gray;
+    /* color: gray; */
 }
 
 #nextBtn {
@@ -155,7 +172,7 @@ header {
     font-size: 50px;
     border: none;
     background: transparent;
-    color: rgb(168, 160, 160);
+    opacity: .3;
     cursor: pointer;
 }
 
@@ -268,6 +285,7 @@ header {
     align-items: center;
     height: 100vh;
     width: 100%;
+    transition: all .30s ease;
 }
 
 .about .container {
@@ -279,11 +297,13 @@ header {
 }
 
 .container h1 {
-    font-size: 20px;
+    font-size: 30px;
     text-align: center;
+    padding: 30px 0;
 }
 
 .about-us {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -299,6 +319,17 @@ header {
 .about-us .info {
     padding: 0 40px;
     text-align: justify;
+}
+
+.holder {
+    position: absolute;
+    top: 5%;
+    left: 3%;
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+    border: 4px solid black;
+    background: white;
 }
 
 /* .about {
