--- a/css/havtent.css
+++ b/css/havtent.css
@@ -20,7 +20,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px 5%;
+    padding: 10px 7%;
     background: #ffffff;
     transition: all .5s ease;
     box-shadow: 0 5px 30px rgba(0, 0, 0, 0.3);
@@ -94,7 +94,7 @@ header {
         top: 100%;
         right: 2%;
         width: 300px;
-        height: 40vh;
+        /* height: 60vh; */
         background: #40916c;
         display: none;
         flex-direction: column;
@@ -160,7 +160,7 @@ header {
 }
 
 #prevBtn:hover {
-    /* color: gray; */
+    opacity: .8;
 }
 
 #nextBtn {
@@ -177,7 +177,7 @@ header {
 }
 
 #nextBtn:hover {
-    color: gray;
+    opacity: .8;
 }
 
 @media (max-width: 840px) {
@@ -314,6 +314,7 @@ header {
 .about-us img {
     width: 400px;
     height: 500px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 .about-us .info {
@@ -324,13 +325,158 @@ header {
 .holder {
     position: absolute;
     top: 5%;
-    left: 3%;
+    left: 38%;
     width: 30px;
     height: 30px;
     border-radius: 100%;
-    border: 4px solid black;
+    border: 4px solid #0a6b40;
     background: white;
 }
+
+.book-holder1 {
+    position: absolute;
+    top: 11%;
+    left: 1%;
+    width: 30px;
+    height: 5px;
+    background: #0a6b40;
+    border-radius: 5px;
+}
+.book-holder2 {
+    position: absolute;
+    top: 20%;
+    left: 1%;
+    width: 30px;
+    height: 5px;
+    background: #0a6b40;
+    border-radius: 5px;
+}
+.book-holder3 {
+    position: absolute;
+    top: 30%;
+    left: 1%;
+    width: 30px;
+    height: 5px;
+    background: #0a6b40;
+    border-radius: 5px;
+}
+.book-holder5 {
+    position: absolute;
+    top: 40%;
+    left: 1%;
+    width: 30px;
+    height: 5px;
+    background: #0a6b40;
+    border-radius: 5px;
+}
+.book-holder6 {
+    position: absolute;
+    top: 50%;
+    left: 1%;
+    width: 30px;
+    height: 5px;
+    background: #0a6b40;
+    border-radius: 5px;
+}
+.book-holder7 {
+    position: absolute;
+    top: 60%;
+    left: 1%;
+    width: 30px;
+    height: 5px;
+    background: #0a6b40;
+    border-radius: 5px;
+}
+.book-holder8 {
+    position: absolute;
+    top: 70%;
+    left: 1%;
+    width: 30px;
+    height: 5px;
+    background: #0a6b40;
+    border-radius: 5px;
+}
+.book-holder9 {
+    position: absolute;
+    top: 80%;
+    left: 1%;
+    width: 30px;
+    height: 5px;
+    background: #0a6b40;
+    border-radius: 5px;
+}
+.book-holder10 {
+    position: absolute;
+    top: 90%;
+    left: 1%;
+    width: 30px;
+    height: 5px;
+    background: #0a6b40;
+    border-radius: 5px;
+}
+/* .book-holder11 {
+    position: absolute;
+    top: 100%;
+    left: 1%;
+    width: 30px;
+    height: 5px;
+    background: #0a6b40;
+    border-radius: 5px;
+} */
+/* .book-holder11 {
+    position: absolute;
+    top: 55%;
+    left: 1%;
+    width: 20px;
+    height: 5px;
+    background: #0a6b40;
+    border-radius: 5px;
+}
+.book-holder11 {
+    position: absolute;
+    top: 55%;
+    left: 1%;
+    width: 20px;
+    height: 5px;
+    background: #0a6b40;
+    border-radius: 5px;
+}
+.book-holder11 {
+    position: absolute;
+    top: 55%;
+    left: 1%;
+    width: 20px;
+    height: 5px;
+    background: #0a6b40;
+    border-radius: 5px;
+}
+.book-holder11 {
+    position: absolute;
+    top: 55%;
+    left: 1%;
+    width: 20px;
+    height: 5px;
+    background: #0a6b40;
+    border-radius: 5px;
+}
+.book-holder11 {
+    position: absolute;
+    top: 55%;
+    left: 1%;
+    width: 20px;
+    height: 5px;
+    background: #0a6b40;
+    border-radius: 5px;
+}
+.book-holder11 {
+    position: absolute;
+    top: 55%;
+    left: 1%;
+    width: 20px;
+    height: 5px;
+    background: #0a6b40;
+    border-radius: 5px;
+} */
 
 /* .about {
     display: block;
