--- a/css/course.css
+++ b/css/course.css
@@ -13,7 +13,7 @@
 }
 
 .course-container {
-    padding: 50px;
+    /* padding: 50px; */
 }
 
 .course-contents {
@@ -27,7 +27,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 70%;
+    width: 90%;
     padding: 20px;
 }
 
@@ -39,7 +39,50 @@
 }
 
 .course-head p {
-    padding: 10px;
+    /* padding: 10px; */
     font-size: 16px;
     text-align: center;
+}
+
+.course-choices {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 20px 0;
+}
+
+.course {
+    width: 250px;
+    background-color: whitesmoke;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    gap: 10px;
+    
+}
+
+.course img {
+    width: 100%;
+    /* height: 150px; */
+    image-rendering: pixelated;
+    border-radius: 10px 10px 10px 10px;
+}
+
+.course .content {
+    padding: 15px;
+
+}
+
+.course .content h1 {
+    font-size: 13px;
+    font-weight: 600;
+}
+
+.course .content h3 {
+    color: gray;
+    font-size: 10px;
+}
+
+.course .content p {
+    text-align: left;
+    padding: 8px 0;
 }
