--- a/css/course.css
+++ b/css/course.css
@@ -8,18 +8,25 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: aqua;
+    /* background-color: aqua; */
     width: 100%;
 }
 
 .course-container {
     /* padding: 50px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background-color: aqua; */
+    width: 100%;
+    background-color: whitesmoke;
 }
 
 .course-contents {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
 }
 
 .course-head {
@@ -27,7 +34,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 90%;
+    /* margin: 40px; */
+    width: 65%;
     padding: 20px;
 }
 
@@ -39,36 +47,38 @@
 }
 
 .course-head p {
-    /* padding: 10px; */
+    padding: 10px 20px;
     font-size: 16px;
     text-align: center;
 }
 
 .course-choices {
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
-    gap: 20px;
-    padding: 20px 0;
+    gap: 25px;
+    padding: 20px;
 }
 
 .course {
-    width: 250px;
-    background-color: whitesmoke;
+    width: 200px;
+    background-color: white;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
+    border-radius: 5px;
     gap: 10px;
     
 }
 
 .course img {
     width: 100%;
-    /* height: 150px; */
-    image-rendering: pixelated;
-    border-radius: 10px 10px 10px 10px;
+    height: 130px;
+    /* image-rendering: pixelated; */
+    border-radius: 5px 5px 5px 5px;
 }
 
 .course .content {
-    padding: 15px;
+    padding: 10px;
 
 }
 
@@ -85,4 +95,25 @@
 .course .content p {
     text-align: left;
     padding: 8px 0;
+    font-size: 13px;
+}
+
+.course-length {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    /* padding: 10px 10px; */
+    margin: 0;
+    color: #0a6b40;
+}
+
+.course-length h4 {
+    font-size: 12px;
+}
+
+.course-length a {
+    text-decoration: none;
+    font-size: 18px;
+    color: #0a6b40;
+    /* font-weight: 600; */
 }
