--- a/css/course.css
+++ b/css/course.css
@@ -26,7 +26,7 @@
     align-items: center;
     /* background-color: aqua; */
     width: 100%;
-    background-color: #14eb8a;
+    background-image: 'images/greenbg.jpg';
 }
 
 .course-contents {
@@ -54,15 +54,14 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
-.course-head p {
-    
-    font-size: 16px;
-    text-align: center;
-    color: #fff;
-}
+/* .course-head p {
+} */
 
 .Heading p {
     padding: 10px 100px;
+    font-size: 16px;
+    text-align: center;
+    color: #fff;
 }
 
 .course-choices {
@@ -92,6 +91,11 @@
     height: 130px;
     /* image-rendering: pixelated; */
     border-radius: 5px 5px 5px 5px;
+    /* opacity: .8; */
+}
+
+.course img:hover {
+    opacity: .9;
 }
 
 .course .content {
@@ -134,4 +138,16 @@
     font-size: 18px;
     color: #0a6b40;
     /* font-weight: 600; */
+}
+
+#moreCourseBtn {
+    padding: 10px;
+    color: #ffffff;
+    background-color: #0a6b40;
+    font-size: 16px;
+    font-weight: 600;
+    border: none;
+    border-radius: 5px;
+    /* opacity: .4; */
+    cursor: pointer;
 }
