--- a/css/course.css
+++ b/css/course.css
@@ -26,7 +26,7 @@
     align-items: center;
     /* background-color: aqua; */
     width: 100%;
-    background-image: 'images/greenbg.jpg';
+    background-color: #d8f3dc;
 }
 
 .course-contents {
@@ -41,13 +41,13 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    /* margin: 40px; */
-    width: 65%;
+    margin: 20px;
+    width: 80%;
     padding: 20px;
 }
 
-.course-head h2 {
-    color: #ffffff;
+.course-head h2{
+    color: #0a6b40;
     font-size: 30px;
     padding: 10px 0;
     text-align: center;
@@ -58,10 +58,10 @@
 } */
 
 .Heading p {
-    padding: 10px 100px;
+    padding: 10px 200px;
     font-size: 16px;
     text-align: center;
-    color: #fff;
+    color: #0a6b40;
 }
 
 .course-choices {
@@ -74,21 +74,23 @@
 }
 
 .course {
-    width: 200px;
+    width: 230px;
     background-color: white;
     border-radius: 5px;
     gap: 10px;
+    border: 1px solid #0a6b40;
     transition: all .5s;
 }
 
 .course:hover {
     box-shadow: 0 5px 40px rgba(0, 0, 0, 0.4);
     margin-bottom: 20px;
+    border: none;
 }
 
 .course img {
     width: 100%;
-    height: 130px;
+    height: 150px;
     /* image-rendering: pixelated; */
     border-radius: 5px 5px 5px 5px;
     /* opacity: .8; */
@@ -141,7 +143,7 @@
 }
 
 #moreCourseBtn {
-    padding: 10px;
+    padding: 15px;
     color: #ffffff;
     background-color: #0a6b40;
     font-size: 16px;
