--- a/css/havtent.css
+++ b/css/havtent.css
@@ -294,6 +294,7 @@ header {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-color: #fff;
 }
 
 .container h1 {
