--- a/css/havtent.css
+++ b/css/havtent.css
@@ -137,7 +137,7 @@ header {
     height: 100vh;
     width: 100%;
     background-color: blueviolet;
-    transition: 0.30s ease-in-out;
+    transition: 0.4s;
     
 }
 
