--- a/css/course.css
+++ b/css/course.css
@@ -69,7 +69,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 25px;
+    gap: 15px;
     padding: 20px;
 }
 
@@ -167,6 +167,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
     background-color: #fff;
     width: 100%;
     padding: 0;
@@ -264,6 +265,7 @@
     margin: 10px 0;
 }
 
+/* Footer Section  */
 .footer {
     width: 100%;
     height: 400px;
