--- a/css/havtent.css
+++ b/css/havtent.css
@@ -12,7 +12,7 @@ body {
 
  /* nav bar section */
 header {
-    position: fixed;
+    /* position: fixed; */
     width: 100%;
     top: 0;
     right: 0;
@@ -126,7 +126,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;    
+    height: 90vh;    
 }
 
 .image-comtainer {
@@ -134,7 +134,7 @@ header {
     display: flex;
     /* justify-content: center; */
     align-items: center;
-    height: 100vh;
+    height: 90vh;
     width: 100%;
     background-color: blueviolet;
     transition: 0.4s;
@@ -143,7 +143,7 @@ header {
 
 .image-comtainer img {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     
 }
 #prevBtn {
