--- a/css/course.css
+++ b/css/course.css
@@ -44,7 +44,14 @@
     margin: 20px;
     width: 80%;
     padding: 20px;
+    /* opacity: 0; */
 }
+
+/* .course-head .active {
+    opacity: 1;
+    transform: scale(1);
+    transition: all .10s;
+} */
 
 .course-head h2{
     color: #0a6b40;
@@ -268,7 +275,7 @@
 /* Footer Section  */
 .footer {
     width: 100%;
-    height: 400px;
+    height: 350px;
 }
 
 .footer .footer-container {
@@ -283,12 +290,13 @@
 
 .footer-content-container {
     display: flex;
-    justify-content:space-between;
+    justify-content:space-around;
     align-items: center;
     width: 80%;
     /* background-color: #fff; */
-    border: 2px solid red;
+    /* border: 2px solid red; */
     color: #fff;
+    padding: 10px 15px;
 }
 
 .footer-content-container .links {
@@ -314,12 +322,12 @@
 
 .social-handles .social-icons {
     display: flex;
-    /* padding: 0 10px; */
-    gap: 10px;
+    padding: 10px 0;
+    gap: 20px;
 }
 
 .footer-content-container .useful-links {
-    width: 400px;
+    width: 300px;
     margin: 10px 20px;
 }   
 
@@ -340,5 +348,15 @@
 }
 
 .the-links a:hover {
-    border-bottom: 2px solid #fff;
+    /* border-bottom: 2px solid #fff; */
+    text-decoration-style: underline;
+}
+
+.inTouch h3 {
+    padding: 20px 0;
+}
+
+.inTouch p {
+    font-size: 15px;
+    padding: 5px;
 }
