--- a/login.css
+++ b/login.css
@@ -23,7 +23,7 @@ body {
     width: 350px;
     background-color: white;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-    padding: 10px;
+    padding: 20px;
 }
 
 .container h1 {
@@ -38,11 +38,13 @@ body {
 }
 
 form .inputfield {
+    position: relative;
     width: 100%;
     position: relative;
 }
 
 .inputfield input {
+    position: relative;
     width: 100%;
     padding: 10px;
     border: 2px solid #0a6b40;
