--- a/login.css
+++ b/login.css
@@ -46,9 +46,12 @@ form .inputfield {
 .inputfield input {
     position: relative;
     width: 100%;
-    padding: 10px;
+    padding: 10px 5px 10px 30px;
     border: 2px solid #0a6b40;
     border-radius: 5px;
+    font-size: 20px;
+    margin: 10px 0;
+    background-color: #fff;
 }
 
 .inputfield i {
@@ -58,7 +61,13 @@ form .inputfield {
     top: 0%;
     left: 2%;
     text-align: center;
-    padding: 5px;
+    padding: 20px 0;
     /* transform: translate(-50%, -50%); */
     z-index: 1000;
+}
+
+.container .precovery {
+    width: 100%;
+    font-size: 13px;
+    text-align: left;
 }
