--- a/login.css
+++ b/login.css
@@ -27,7 +27,7 @@ body {
     padding: 20px;
 }
 
- h1 {
+.form-box h1 {
     color: #0a6b40;
     font-size: 30px;
     text-align: center;
@@ -36,13 +36,13 @@ body {
 }
 
 .form-box h1::after {
-    content: "";
+    content: '';
     width: 30px;
     height: 4px;
     border-radius: 3px;
     background-color: #0a6b40;
     position: absolute;
-    bottom: -12px;
+    top: 70px;
     left: 50%;
     transform: translateX(-50%);
 }
@@ -59,19 +59,20 @@ form .inputfield {
     position: relative;
 }
 
-.formarea {
+/* .formarea {
     margin: 10px 0;
-}
+} */
 
 .inputfield input {
     position: relative;
     width: 100%;
-    padding: 10px 5px 10px 30px;
-    border: 2px solid #0a6b40;
+    padding: 10px 5px 10px 40px;
+    border: none;
+    outline: none;
     border-radius: 5px;
     font-size: 20px;
     margin: 10px 0;
-    background-color: #fff;
+    background-color: #cff6d5;
 }
 
 .inputfield i {
@@ -81,32 +82,43 @@ form .inputfield {
     top: 0%;
     left: 2%;
     text-align: center;
-    padding: 20px 0;
+    padding: 20px 5px;
     /* transform: translate(-50%, -50%); */
     z-index: 1000;
 }
 
 form p {
-    width: 100%;
+    /* width: 100%; */
     font-size: 13px;
     text-align: left;
+    /* padding: 10px 0; */
 }
 
 .createacc {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: center;margin: 10px 0;
+    margin: 5px 0;
+    /* align-items: center; */
 }
 
 .createacc button {
-    width: 150px;
+    flex-basis: 40%;
+    height: 40px;
     background-color: #0a6b40;
     color: #fff;
-    font-size: 20px;
-    border: none;
-    border-radius: 50px;
-    padding: 10px;
-    transition: background .1s;
+    border: 0;
+    outline: 0;
+    border-radius: 20px;
+    transition: background 1s;
     cursor: pointer;
+}
+
+.createacc button.disable {
+    background-color: #cbf0bb;
+    color: #0a6b40;
+}
+
+.formarea {
+    height: 230px;
 }
