--- a/css/havtent.css
+++ b/css/havtent.css
@@ -55,6 +55,11 @@ header {
     border-radius: 5px;
 }
 
+.nav-bar li a.sign-up-btn {
+    background-color: #0a6b40;
+    color: #fff;
+}
+
 .nav-bar li a:hover {
     color: #40916c;
     background-color: whitesmoke;
@@ -227,24 +232,25 @@ header {
     color: wheat;
 }
 
-.content-1 .chooseHavtont {
-    width: 150px;
-    text-decoration: none;
+.content-1 .chooseHavtont button{
+    width: 200px;
     color: white;
     padding: 10px;
     margin: 20px 10px;
-    background:#40916c;
+    background:#0a6b40;
     border: none;
+    font-size: 18px;
     font-weight: 600;
     cursor: pointer;
 }
 
 .content-1 .chooseHavtont a {
-    color: aqua;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
 }
 
 /* .content-1 .chooseHavtont {
-    margin: 20px 150px;
+    margin: 20px 150px; 
 } */
 
 .content-1 button:hover {
