--- a/form.css
+++ b/form.css
@@ -5,14 +5,41 @@
 }
 
 body {
+    position: relative;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
     font-family: 'Poppins', sans-serif;
-    background-image: url('images/greenbg.jpeg');
-    background-repeat: no-repeat;
-    background-size: cover;
+    background: rgb(250, 250, 250);
+    overflow: hidden;
+}
+
+/* .idontknowwhattonamethisclass {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    font-family: 'Poppins', sans-serif;
+    background: rgb(250, 250, 250);
+    overflow: hidden;
+} */
+
+h2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 350px;
+    color: #000000;
+    padding: 10px;
+    height: 70px;
+    text-align: center;
+    font-size: 20px;
+    z-index: 100;
 }
 
 .container {
@@ -22,16 +49,18 @@ body {
     justify-content: center;
     align-items: center;
     width: 350px;
-    background-color: white;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    background-color: rgb(250, 250, 250);
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
     padding: 20px;
+    border-radius: 5px;
+    margin: 20px 0;
+    z-index: 1000;
 }
 
 .form-box h1 {
     color: #0a6b40;
-    font-size: 30px;
+    font-size: 25px;
     text-align: center;
-    /* padding: 10px 0; */
     margin: 10px 0;
 }
 
@@ -45,6 +74,7 @@ body {
     top: 70px;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 1000;
 }
 
 .container form {
@@ -66,7 +96,6 @@ form .inputfield {
 }
 
 .inputfield {
-    /* position: relative; */
     width: 100%;
     display: flex;
     border-radius: 5px;
@@ -75,33 +104,29 @@ form .inputfield {
     max-height: 65px;
     transition: max-height 0.5s;
     overflow: hidden;
-    background-color: #cff6d5;
+    background-color: #aef5d5;
 }
 
 input {
     width: 100%;
     border: none;
     outline: none;
-    /* font-size: 20px; */
     padding: 18px 10px;
     background: transparent;
+    color: #000000;
+    font-size: 16px;
 }
 
 .inputfield i {
     color: #0a6b40;
     font-size: 20px;
-    /* text-align: center; */
     padding: 0 10px;
-    /* transform: translate(-50%, -50%); */
-    /* z-index: 1000; */
 }
 
 form p {
-    /* width: 100%; */
     font-size: 13px;
     text-align: left;
-    color: #000;
-    /* padding: 10px 0; */
+    color: #000000;
 }
 
 .createacc {
@@ -109,7 +134,6 @@ form p {
     display: flex;
     justify-content: space-between;
     margin: 5px 0;
-    /* align-items: center; */
 }
 
 .createacc button {
@@ -119,13 +143,13 @@ form p {
     color: #fff;
     border: 0;
     outline: 0;
-    border-radius: 20px;
+    border-radius: 5px;
     transition: background 1s;
     cursor: pointer;
 }
 
 .createacc button.disable {
-    background-color: #cbf0bb;
+    background-color: #d1f0bb;
     color: #0a6b40;
 }
 
